[s390]: no precompiled headers build broken

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • None
    • b17
    • s390x

        The nop() function which calls z_nop() is misplaced in the current implementation:
        assembler_s390.hpp:2969:15: error: inline function ‘void Assembler::z_nop()’ used but never defined [-Werror]
        Workaround: build with precompiled headers.

              Assignee:
              Martin Doerr
              Reporter:
              Martin Doerr
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: