8204345: [s390]: no precompiled headers build broken

Reviewed-by: simonis, shade, coleenp